Fix font placement on tablets

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -9,7 +9,7 @@
 
 .item-picture-content {
 	width: 530px !important;
-	height: auto !important;
+	height: 275px !important;
 }
 
 /* Tutoring tablet */
